--- a/pryProyecto.csproj
+++ b/pryProyecto.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Content Include="Imagenes\cola-en-java.png" />
     <Content Include="Imagenes\cola.jpg" />
+    <None Include="Imagenes\Lista Simple.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
