--- a/pryProyecto.csproj
+++ b/pryProyecto.csproj
@@ -71,6 +71,12 @@
     <Compile Include="frmCola.Designer.cs">
       <DependentUpon>frmCola.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDev.Designer.cs">
+      <DependentUpon>frmDev.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmListaDoble.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,18 @@
     <Compile Include="frmListaSimple.Designer.cs">
       <DependentUpon>frmListaSimple.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPila.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPila.Designer.cs">
+      <DependentUpon>frmPila.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPrincipal.Designer.cs">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -94,11 +112,20 @@
     <EmbeddedResource Include="frmCola.resx">
       <DependentUpon>frmCola.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmDev.resx">
+      <DependentUpon>frmDev.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmListaDoble.resx">
       <DependentUpon>frmListaDoble.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmListaSimple.resx">
       <DependentUpon>frmListaSimple.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPila.resx">
+      <DependentUpon>frmPila.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPrincipal.resx">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -126,6 +153,9 @@
   <ItemGroup>
     <Content Include="Imagenes\cola-en-java.png" />
     <Content Include="Imagenes\cola.jpg" />
+    <None Include="Resources\IMG_20150804_090436-e1441771548717.jpg" />
+    <None Include="Resources\640px-Pila.svg.jpg" />
+    <None Include="Resources\pila.jpg" />
     <None Include="Resources\xd.jpg" />
     <None Include="Imagenes\Lista Simple.png" />
   </ItemGroup>
