--- a/pryProyecto.csproj
+++ b/pryProyecto.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsArbol.cs" />
+    <Compile Include="clsBaseDatos.cs" />
     <Compile Include="clsCliente.cs" />
     <Compile Include="clsCola.cs" />
     <Compile Include="clsListaDoble.cs" />
@@ -64,6 +65,18 @@
     </Compile>
     <Compile Include="frmArbol.Designer.cs">
       <DependentUpon>frmArbol.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBaseDatosConsulta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBaseDatosConsulta.Designer.cs">
+      <DependentUpon>frmBaseDatosConsulta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBaseDatosOperaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBaseDatosOperaciones.Designer.cs">
+      <DependentUpon>frmBaseDatosOperaciones.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCola.cs">
       <SubType>Form</SubType>
@@ -108,6 +121,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmArbol.resx">
       <DependentUpon>frmArbol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBaseDatosConsulta.resx">
+      <DependentUpon>frmBaseDatosConsulta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBaseDatosOperaciones.resx">
+      <DependentUpon>frmBaseDatosOperaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCola.resx">
       <DependentUpon>frmCola.cs</DependentUpon>
